--- a/README.Rmd
+++ b/README.Rmd
@@ -24,7 +24,7 @@ This is where our code is located. A quick overview of the scripts is as follows
 
 *  **app.R** : Code for the associated RShiny App.
 * **attributes_model.R** : Code for checking which non-text attributes were good predictors. Done with logistic regression. 
-* **matrix_text_processing**: Turning the reviews of our data set into a functional Document-Term Matrix. 
+* **matrix_text_processing.R**: Turning the reviews of our data set into a functional Document-Term Matrix. 
 * **train_lr_glmnet.R**: Training and testing the Logistic Regression model. 
 * **train_nb.R**: Training and testing the Naive Bayes model. 
 * **train_svm.R**: Training adn testing the Support Vector Machine model. 
