--- a/report/625-finalreport-G6.Rmd
+++ b/report/625-finalreport-G6.Rmd
@@ -34,11 +34,12 @@ The dataset for this project
 ```{r, echo = FALSE}
 results_table <- 
     cbind(model = c("Naive Bayes", "Random Forest", "SVM", "Logistic Regression"),
-          rel_time = c(0,0,0,0),
-          cluster_time = c(0,0,0,0), recall_score = c(0,0,0,0),
-          prec_score = c(0,0,0,0), f1_score = c(0,0,0,0))
+          rel_time = c(0, 0, 0, 7.21),
+          recall_score = c(0, 0, 0, 72.41),
+          prec_score = c(0, 0, 0, 89.25),
+          f1_score = c(0 ,0, 0, 79.95))
 
-colnames(results_table) <- c("Model", "Rel. Time", "Cluster Time",
+colnames(results_table) <- c("Model", "Time (s)",
                              "Recall", "Precision", "F1 Score")
 
 kable(results_table)
