--- a/README.Rmd
+++ b/README.Rmd
@@ -30,19 +30,23 @@ This is where our code is located. A quick overview of the scripts is as follows
 * **train_svm.R**: Training adn testing the Support Vector Machine model. 
 * **train_rf.R**: Training the Random Forest model. 
 
-## rds/
+### rds/
 
 This is where our data is saved. Many of the datasets were taking too long to load as csv files (i.e 10 minutes), so we chose to save our data in RDS form instead. Here we saved the resuls of our training models, training and testing IDs (for accuracy of model comparison on the cluster) and different DTM matrices. 
 
 
-## Cluster_Output/ 
+### Cluster_Output/ 
 
 Contains the results from all the training scripts in **R/** after they were run on the cluster. 
 
-## report/ 
+### report/ 
 
 The folder containg our final report in .Rmd format for this project (See this for more details on the project)
 
+## Group Members 
+* **Tahmeed Tureen** *(tureen@umich.edu*
+* **Mandy Meng Ni Ho** *(mandyho@umich.edu)*
+* **Ben Brennan** *(brennben@umich.edu)*
 
 Thanks for checking out our project. :) 
 
