--- a/README.Rmd
+++ b/README.Rmd
@@ -44,7 +44,7 @@ Contains the results from all the training scripts in **R/** after they were run
 The folder containg our final report in .Rmd format for this project (See this for more details on the project)
 
 ## Group Members 
-* **Tahmeed Tureen** *(tureen@umich.edu*
+* **Tahmeed Tureen** *(tureen@umich.edu)*
 * **Mandy Meng Ni Ho** *(mandyho@umich.edu)*
 * **Ben Brennan** *(brennben@umich.edu)*
 
