updated to show cluster files

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,18 +16,27 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of Project is to make predictions as to whether a person is going to recomend or not recommend based off of their review of an airline trip. This project contains four main folders, as detailed below. 
+The goal of Project is to make predictions as to whether a person is going to recomend or not recommend an airline based off of their review of a trip. This project contains six main folders, as detailed below. 
 
 ## R/ 
 
 This is where our code is located. A quick overview of the scripts is as follows: 
 
 * **attributes_model.R** : Code for checking which non-text attributes were good predictors. Done with logistic regression. 
+
 * **matrix_text_processing.R**: Turning the reviews of our data set into a functional Document-Term Matrix. 
-* **train_lr_glmnet.R**: Training and testing the Logistic Regression model. 
+
+* **train_lr_glmnet.R**: Training and testing the Logistic Regression model via LASSO, without an intercept. 
+
+* **train_InterceptLasso.R**: Training and testing the Logistic Regression model via LASSO, with an intercept. 
+
 * **train_nb.R**: Training and testing the Naive Bayes model. 
+
 * **train_svm.R**: Training adn testing the Support Vector Machine model. 
+
 * **train_rf.R**: Training the Random Forest model. 
+
+Any other scripts - if any - are intermediate and will be deleted when they are no longer needed. 
 
 ### shiny/ 
 
@@ -37,7 +46,7 @@ This folder has the code and data corresponding to the Shiny application associa
 shiny::runGitHub('airplanes','benbren', subdir = 'shiny')
 ```
 
-This should open a window that allows you to use the app in its current form, assuming you have the shiny package installed. If not - do so, and this will work.  
+This should open a window that allows you to use the app in its current form, assuming you have the *shiny* package installed. If not - do so, and this will work.  
 
 ### rds/
 
@@ -48,9 +57,13 @@ This is where our data is saved. Many of the datasets were taking too long to lo
 
 Contains the results from all the training scripts in **R/** after they were run on the cluster. 
 
+### Cluster_Job_File / 
+
+Contains the .slurm files submitted to the cluster for training of the algorithms. 
+
 ### report/ 
 
-The folder containing our final report in .Rmd format for this project (See this for more details on the project)
+The folder containing our final report in both R Markdown and PDF format for this project (See this for more details on the project). 
 
 ## Group Members 
 * **Tahmeed Tureen** *(tureen@umich.edu)*
