Ben is ass at spelling

--- a/report/625-finalreport-G6.Rmd
+++ b/report/625-finalreport-G6.Rmd
@@ -48,14 +48,14 @@ To create our predictive model
 
 ```{r, echo = FALSE}
 results_table <- 
-    cbind(model = c("Naive Bayes", "Logistic Regression", "Logistic Reg. (No. Intercept)", "SVM"),
+    cbind(model = c("Naive Bayes", "Logistic Regression w/ Lasso", "Logistic Reg. w/ Lasso (No. Intercept)", "Support Vector Machines"),
           rel_time = c(0, 0, 0, 0),
           recall_score = c(0, 0, 0, 0),
           prec_score = c(0, 0, 0, 0),
           f1_score = c(0 ,0, 0, 0))
 
-colnames(results_table) <- c("Model", "Time (s)",
-                             "Recall", "Precision", "F1 Score")
+colnames(results_table) <- c("Model", "Time (sec)",
+                             "Recall (%)", "Precision (%)", "F1 Score (%)")
 
 kable(results_table)
 ```
@@ -66,10 +66,10 @@ kable(results_table)
 
 - Ben Brennan :
 
-- Mandy Meng Ni Ho:
+- Mandy Meng Ni Ho :
 
-- Tahmeed Tureen
+- Tahmeed Tureen :
 
 ## Repository
 
-The work directory of this entire project has been published on a GitHub repository, which can be accessed via the following link: [](https://github.com/benbren/airplanes)
+The work directory of this entire project has been published on a GitHub repository, which can be accessed via the following link: [**CLICK HERE**](https://github.com/benbren/airplanes)
