--- a/report/625-finalreport-G6.Rmd
+++ b/report/625-finalreport-G6.Rmd
@@ -87,20 +87,12 @@ kable(results_table)
 
 ## Contributions
 
-- Ben Brennan
+- Ben Brennan :
 
-<<<<<<< HEAD
-- Mandy Meng Ni Ho
-=======
 - Mandy Meng Ni Ho :
->>>>>>> 43ec285ce2f79a4a7501a6779b677e3c0068e7c4
 
 - Tahmeed Tureen :
 
 ## Repository
 
-<<<<<<< HEAD
-The work directory of this entire project has been published on a GitHub repository, which can be accessed via the following link: (https://github.com/benbren/airplanes)
-=======
 The work directory of this entire project has been published on a GitHub repository, which can be accessed via the following link: [**CLICK HERE**](https://github.com/benbren/airplanes)
->>>>>>> 43ec285ce2f79a4a7501a6779b677e3c0068e7c4
