--- a/report/625-finalreport-G6.Rmd
+++ b/report/625-finalreport-G6.Rmd
@@ -45,7 +45,9 @@ By joining our attribute predictors to our DTM, we obtained a dataset that was a
 
 ## Methodology
 
-The dataset provides both the input of the model as well as the output, therefore, we consider four supervised learning algorithms to create our classification model: (i) Naive Bayes Classifier, (ii) Logistic Regression, (iii) Support Vector Machines, and (iv) Random Forest. The Naive Bayes Classifier is the most easy-to-use algorithm when it comes to textual data classification (citation 1). It is a probabilistic classifier based on the Bayes Theorem and we use this as our baseline classifier. Logistic Regression is a regression-based model that allows us to model the probability of a customer's recommendation (citation 2). For the Logistic Regression, we consider a Lasso Logistic Regression without an intercept and one with an intercept. Applying the lasso shrinkage, we get to shrink the effects of low-importance words in our regression model to exactly zero. Support Vector Machine (SVM) is a discriminative classifier that uses hyperplanes in Euclidean spaces to separate datapoints into separate classes (citation 3). For our SVM, we used **hyperparameters**. Random Forest is an ensemble tree-based method. We separated the dataset as X% Training and Y% Test. The models were then trained on the training set using ```R``` (packages: ). To evaluate and compare the models, we used Recall, Precision, and F1 Scores. As for the interactive dashboard, we planned to develop a Shiny Application using the ```shiny``` package in ```R```.   
+The dataset provides both the input of the model as well as the output, therefore, we consider four supervised learning algorithms to create our classification model: (i) Naive Bayes Classifier, (ii) Logistic Regression, (iii) Support Vector Machines, and (iv) Random Forest. The Naive Bayes Classifier is the most easy-to-use algorithm when it comes to textual data classification (citation 1). It is a probabilistic classifier based on the Bayes Theorem and we use this as our baseline classifier. Logistic Regression is a regression-based model that allows us to model the probability of a customer's recommendation (citation 2). For the Logistic Regression, we consider a Lasso Logistic Regression without an intercept and one with an intercept. Applying the lasso shrinkage, we get to shrink the effects of low-importance words in our regression model to exactly zero. Support Vector Machine (SVM) is a discriminative classifier that uses hyperplanes in Euclidean spaces to separate datapoints into separate classes (citation 3). For our SVM, we used a linear kernel and allowed for shrinkage. Random Forest is an ensemble tree-based learning method that constructes multiple decision trees which can collectively used for classification tasks (see Citation). To assess the performance of these models, we take a training-testing approach with recall, precision, and F1 scores as our evaluation metrics. These models for trained on 
+
+We separated the dataset as X% Training and Y% Test. The models were then trained on the training set using ```R``` (packages: ). To evaluate and compare the models, we used Recall, Precision, and F1 Scores. As for the interactive dashboard, we planned to develop a Shiny Application using the ```shiny``` package in ```R```.   
 
 ### Statistical Models
 
