--- a/report/625-finalreport-G6.Rmd
+++ b/report/625-finalreport-G6.Rmd
@@ -45,30 +45,10 @@ By joining our attribute predictors to our DTM, we obtained a dataset that was a
 
 ## Methodology
 
-The dataset provides both the input of the model as well as the output, therefore, we consider four supervised learning algorithms to create our classification model: (i) Naive Bayes Classifier, (ii) Logistic Regression, (iii) Support Vector Machines, and (iv) Random Forest. The Naive Bayes Classifier is the most easy-to-use algorithm when it comes to textual data classification (citation 1). It is a probabilistic classifier based on the Bayes Theorem and we use this as our baseline classifier. Logistic Regression is a regression-based model that allows us to model the probability of a customer's recommendation (citation 2). For the Logistic Regression, we consider a Lasso Logistic Regression without an intercept and one with an intercept. Applying the lasso shrinkage, we get to shrink the effects of low-importance words in our regression model to exactly zero. Support Vector Machine (SVM) is a discriminative classifier that uses hyperplanes in Euclidean spaces to separate datapoints into separate classes (citation 3). For our SVM, we used a linear kernel and allowed for shrinkage. Random Forest is an ensemble tree-based learning method that constructes multiple decision trees which can collectively used for classification tasks (see Citation). To assess the performance of these models, we take a training-testing approach with recall, precision, and F1 scores as our evaluation metrics. These models for trained on 
-
-We separated the dataset as X% Training and Y% Test. The models were then trained on the training set using ```R``` (packages: ). To evaluate and compare the models, we used Recall, Precision, and F1 Scores. As for the interactive dashboard, we planned to develop a Shiny Application using the ```shiny``` package in ```R```.   
-
-### Statistical Models
-
-- **Naive Bayes** \newline
-
-Let R be the event that a customer recommends the airline. 
-$$
-P(\textrm{R} \; \vert "Great \; Time") \propto P("Great \; Time" \; \vert \; \textrm{R}) = P("Great" \; \vert \; \textrm{R}) \times P("Time" \; \vert \; \textrm{R})
-$$
-
-- **Logistic Regression**
-
-- **Logistic Regression (No Intercept)**
-
-- **Support Vector Machine**
-
-- **Random Forest**
-
-This shit failed so we legit didn't use it. 
+The dataset provides both the input of the model as well as the output, therefore, we consider four supervised learning algorithms to create our classification model: (i) Naive Bayes Classifier, (ii) Logistic Regression, (iii) Support Vector Machines, and (iv) Random Forest. The Naive Bayes Classifier is the most easy-to-use algorithm when it comes to textual data classification (citation 1). It is a probabilistic classifier based on the Bayes Theorem and we use this as our baseline classifier. Logistic Regression is a regression-based model that allows us to model the probability of a customer's recommendation (citation 2). For the Logistic Regression, we consider a Lasso Logistic Regression without an intercept and one with an intercept. Applying the lasso shrinkage, we get to shrink the effects of low-importance words in our regression model to exactly zero. Support Vector Machine (SVM) is a discriminative classifier that uses hyperplanes in Euclidean spaces to separate datapoints into separate classes (citation 3). For our SVM, we used a linear kernel and allowed for shrinkage. Random Forest is an ensemble tree-based learning method that constructes multiple decision trees which can collectively used for classification tasks (see Citation). The discussion of how these algorithms work from a mathematical perspective is beyond the scope of this project report, however, we provided references at the end of this document. To compare and assess these models, we take a training-testing approach with recall, precision, and F1 scores as our evaluation metrics. The statistical computing was performed using ```R``` (packages: ```caret```, ```e1071```, ```randomForest```, ```glmnet```). As for the interactive dashboard, we use the ```shiny``` package in ```R``` to develop a Shiny application.
 
 ## Computational Challenges
+
 
 We attempted to train our models on our personal laptops (both Mac and P.C.). However, due to the large amounts of data particulary the large number of dependent variables ($X_{word_{i}}$) we were either not able to succesfully train our models (timeout or memory errors). Therefore, we subset the dataset to a smaller number of reviews and re-trained our models to assess if our code was running appropriately.
 
@@ -96,7 +76,7 @@ kable(results_table)
 
 ### Shiny Application
 
-The Shiny application can be viewed by running this command on the ```R``` console: . It is important to note that, the use of this app first need to install the ```shiny``` package on their personal machine.
+The Shiny application can be viewed by running this command on the ```R``` console: . It is important to note that the ```shiny``` package must be first insalled before this app can be run. We provide an illustration of what the dashboard looks like below.
 
 ### Discussion
 
